# chess-game-poc

./: .gitignore  DEVLOG.md  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: orchestrator.yaml
scripts/: backup.py
src/chess_game_poc/: boards.py  constants.py  custom_boards.py  engine.py  game.py  player.py  powers.py  utils.py
tests/: test_boards.py  test_engine.py
